Spring '22 Vote Results
Update with the Spring 2022 Class Voting Results

--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -708,15 +708,22 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq31" class="toggle" type="checkbox">
-                    <label for="faq31" class="lbl-toggle" tabindex="0">What's the deal with submitting assignments late?</label>
+                    <label for="faq31" class="lbl-toggle" tabindex="0">UPDATED: What's the deal with submitting assignments late?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
                            <p>To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. In the event that you need more time to complete homework there are two routes you may take:</p>
                            <h3>Late Passes</h3>
-                           <p>If you have late passes available to you, you may use them give yourself an additional 24 hours to complete the assignment. You may use a maximum of two late passes on any assignment (one for the calculation checks and one for the write up submission). Not all assignments will be eligible for using late passes (e.g., group assignment, quizzes, tests).</p>
-                           <p>You do not need to ask me to use a late pass. These are things you can automatically use in the homework system.</p>
+                           <p>
+                               If you have late passes available to you, you may use them give yourself an additional 48 hours to
+                            complete the assignment. You may use a maximum of two late passes on any assignment. Not all assignments
+                             will be eligible for using late passes (e.g., group assignment, quizzes, tests).
+                            </p>
+                           <p>
+                               You do not need to ask me to use a late pass. These are things you can automatically use in the 
+                               homework system.
+                            </p>
                            <h3>Extension Requests</h3>
-                            <p>You may also contact me about getting a limited extension. This is particularly useful if you are out of late passes, need more than 24 hours, or are dealing with an assignment not eligible for late passes. The process to request an extension is the following:</p>
+                            <p>You may also contact me about getting a limited extension. This is particularly useful if you are out of late passes, need more than 48 (96) hours, or are dealing with an assignment not eligible for late passes. The process to request an extension is the following:</p>
                             <ul>
                                 <li>Contact me a minimum of one day/24 hours before the posted due date of the assignment.</li>
                                 <li>Show that you have made some progress on the assignment already.</li>
@@ -915,19 +922,25 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq64" class="toggle" type="checkbox">
-                    <label for="faq64" class="lbl-toggle" tabindex="0">When are the tests-i.e., in class or in the evening?</label>
+                    <label for="faq64" class="lbl-toggle" tabindex="0">UPDATED: When are the tests-i.e., in class or in the evening?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                        <p>The class has voted to have tests be untimed but they must be completed in a particular time frame/window. Thus, they will not be done during our usual class time.</p>
+                        <p>
+                            Based upon the Spring 2022 class vote, we will have a series of smaller (unit-sized) tests throughout
+                            the semester. These tests will be take home in nature, open materials (sans past homeworks) and must
+                            be completed in the given ~48 hour window. (Late Passes will not be able to be used.)
+                        </p>
                         </div>
                     </div>
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq65" class="toggle" type="checkbox">
-                    <label for="faq65" class="lbl-toggle" tabindex="0">When is the final exam?</label>
+                    <label for="faq65" class="lbl-toggle" tabindex="0">UPDATED: When is the final exam?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>The university has yet to schedule final exams for Spring 2022. I'll let you know as soon as I learn.</p>
+                            <p>
+                                Based upon the Spring 2022 class vote, we will not have a final exam.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -1341,57 +1354,34 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq76" class="toggle" type="checkbox">
-                    <label for="faq76" class="lbl-toggle" tabindex="0">What are the consequences of violating Academic Integrity policies?</label>
+                    <label for="faq76" class="lbl-toggle" tabindex="0">UPDATED: What are the consequences of violating Academic Integrity policies?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                           <p>These are from Spring 2021: I posed this issue to the class and set up voting. Here are the results:</p>
-                           <table rules="all" border="1pt">
+                           <p>Based upon the Spring 2022 class vote:</p>
+                           <table rules="all" border="1pt" >
                                <caption>Consequences/Sanctions for Violating Academic Integrity</caption>
-                               <tr>
+                               <tr >
                                    <td></td><th scope="col">First Time</th><th scope="col">Second Time</th><th scope="col">Third or Higher Time</th>
                                </tr>
                                <tr>
-                                   <th scope="row">Minor (homework)</th><td>10% off affected problem</td><td>20$ off affected problem</td><td>30% off the affected assignment</td>
+                                   <th scope="row">Minor</th><td>Warning</td><td>Drop Item Grade 1 level</td><td>0 on Assignment</td>
                                </tr>
                                <tr>
-                                   <th scope="row">Moderate (homework)</th><td>10% off affected assignment</td><td>30% off affected Assignment</td><td>0 on the Assignment</td>
+                                   <th scope="row">Moderate</th><td>Warning</td><td>0 on Assignment</td><td>0 on the Assignment and drop Course Grade 1 level</td>
                                </tr>
                                <tr>
-                                   <th scope="row">Moderate (test)</th><td>50% off affected problem</td><td>20% off affected assignment</td><td>0 on affected assignment</td>
-                               </tr>
-                               <tr>
-                                   <th scope="row">Major</th><td>0 on affected assignment</td><td>0 on affected assignment and Course Grade lowered by one letter</td><td>Grade of XF for the course</td>
-                               </tr>
-                               <tr>
-                                   <th scope="row">Copyright Issues</th><td>0 on posted/affected assignment</td><td>Course Grade lowered by one letter</td><td>Grade of XF for the course</td>
+                                   <th scope="row">Major</th><td>0 on Assignment</td><td>Highest Course Grade Possible is now C</td><td>Grade of XF for the course</td>
                                </tr>
                            </table>
-                           <p>These will be the basis for my recommendations. Keep in mind that the Eberly committee on Academic Integrity may request alterations.</p>
-                           <p>The percentage off conversions will be done after the work is graded and in accordance to the following table.</p>
-                           <table role="presentation" rules="all" border="1px">
-                             <caption>Percentage Off Rubric Adjustments</caption>
-                             <tr>
-                               <th>Unpenalized Score</th><th>10% Off</th><th>20% Off</th><th>30% Off</th><th>50% Off</th><th>75% Off</th>
-                             </tr>
-                             <tr>
-                               <td>Adept</td><td>Advanced</td><td>Proficient</td><td>Proficient</td><td>Progressing</td><td>Beginning</td>
-                            </tr>
-                            <tr>
-                              <td>Advanced</td><td>Proficient</td><td>Progressing</td><td>Progressing</td><td>Beginning</td><td>Beginning</td>
-                            </tr>
-                            <tr>
-                              <td>Proficient</td><td>Progressing</td><td>Progressing</td><td>Beginning</td><td>Beginning</td><td>Beginning</td>
-                            </tr>
-                            <tr>
-                              <td>Progressing</td><td>Beginning</td><td>Beginning</td><td>Beginning</td><td>Not Shown</td><td>Not Shown</td>
-                            </tr>
-                            <tr>
-                              <td>Beginning</td><td>Beginning</td><td>Not Shown</td><td>Not shown</td><td>Not Shown</td><td>Not Shown</td>
-                            </tr>
-                            <tr>
-                              <td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td><td>Not Shown</td>
-                            </tr>
-                        </table>
+                           <p>
+                               I will use the above table for my recommendations. Keep in mind the the Eberly Committee on Academic Integrity
+                               as well as the Office of Student Conduct may choose alter the consequences, including increasing them.
+                           </p>
+                           <p>
+                               Issues involving violations copyright law (e.g., posting assignments to websites such as Chegg,
+                               CourseHero, etc.) will not only constitute a Major violation of the Academic Integrity policies of this course,
+                               but will also entail a separate violation of the Penn State Student Code of Conduct.
+                           </p>
                         </div>
                     </div>
                 </div>
