--- a/teaching.html
+++ b/teaching.html
@@ -31,9 +31,12 @@
           </ul>
         </div>
         <div id="contentnobars">
-          <h2 id="current"><a name="current"></a>Current Courses-Spring 2022<br />
+          <h2 id="current"><a name="current"></a>Current Courses-Fall 2022<br />
           </h2>
-            <p>Stat 461: Analysis of Variance. Check out the syllabus/FAQ <a href="syllabusStat461.html" class="bodylinks">here</a>.</p>
+            <ul>
+              <li>Stat 184: Introduction to R. Syllabus is forthcoming.</li>
+              <li>Stat 461: Analysis of Variance. Check out the <a href="syllabusStat461.html" class="bodylinks">STAT461 Course FAQ (syllabus)</a>.</li>
+              <li>Stat 592: Teaching Statistics. Check out the <a href="stat592syllabus.html" class="bodylinks">STAT592-syllabus</a>.</li>
           <br />
           <h2 id="readings"><a name="readings"></a>Useful Readings<br /></h2>
           <p>The following readings are some that I have been developing for a number of semesters and reflect my most recent thinking in the various areas. I tend to update these files periodically so you'll want to check the files here to see if you have the most recent.  If you have constructive feedback, please feel free to send me your thoughts.</p>
