Further Fall 2022 Updates
Additional updates including the start of the 184 page and a file renaming.

--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -112,20 +112,21 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq15" class="toggle" type="checkbox">
-                    <label for="faq15" class="lbl-toggle" tabindex="0">What are the Fall 2022 Important Dates?</label>
+                    <label for="faq15" class="lbl-toggle" tabindex="0">What are the Spring 2022 Important Dates?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>Important Dates for the Fall 2022 Semester</p>
+                            <p>Penn State's Important Dates for Spring 2022 are as follows:</p>
                             <ul>
-                                <li>Classes Begin on Monday, August 22, 2022</li>
-                                <li>Regular Drop Deadline is Saturday, August 27, 2022</li>
-                                <li>Regular Add Deadline is Sunday, August 28, 2022</li>
-                                <li>Labor Day-No Classes-Monday, September 5, 2022</li>
-                                <li>Final Exam Conflict Filing Period is September 26 to October 16, 2022</li>
-                                <li>Late Add/Drop Deadline is Friday, November 11, 2022</li>
-                                <li>Thanksgiving Holiday-No Classes-November 20-November 26, 2022</li>
-                                <li>Withdrawal Deadline is Friday, December 9, 2022</li>
-                                <li>Classes End on Friday, December 9, 2022</li>
+                                <li>Classes Begin on Monday, January 10th, 2022</li>
+                                <li>Regular Drop Deadline is Saturday, January 15th, 2022</li>
+                                <li>Regular Add Deadline is Sunday, January 16th, 2022</li>
+                                <li>Martin Luther King, Jr. Day-No Class is Monday, January 17th, 2022</li>
+                                <li>Final Exam Conflict Filing Period is February 14th to March 6th, 2022</li>
+                                <li>Spring Break-No Class is March 6th to March 12th, 2022</li>
+                                <li>Late Drop Deadline is Friday, April 8th, 2022</li>
+                                <li>Withdrawal Deadline is Friday, April 29th, 2022</li>
+                                <li>Classes End on Friday, April 29th, 2022</li>
+                                <li>Final Exam is TBA in the week of May 2nd through 6th, 2022</li>
                             </ul>
                         </div>
                     </div>
