--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -64,7 +64,8 @@
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="meetingInfo">Course Meeting Info</h2>
-                <p>Our course meets once a week all semester with the exception of university holidays and closures.
+                <p>Our course meets once a week, in person, all semester with the exception of university holidays and
+                    closures.
                     Each meeting is 75 minutes in length.</p>
                 <ul>
                     <li><strong>Location:</strong> Osmand Lab 207</li>
@@ -74,7 +75,8 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="contactInfo">Instructor Contact Info</h2>
                 <p>The instructor for this semester is Neil J. Hatfield. I use he/him/his pronouns and am
-                    readily reachable via <a href="mailto:njh5464@psu.edu">Penn State email</a>. You can
+                    readily reachable via <a class="bodylinks" href="mailto:njh5464@psu.edu">Penn State email</a>. You
+                    can
                     also connect with me through Microsoft Teams and by phone--(814) 863-7664.
                 </p>
                 <p>I also encourage students to come visit with me in person when possible. My office is
@@ -96,17 +98,18 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="goalsObjectives">Course Goals and Objectives</h2>
                 <h3>Course Goals</h3>
-                <p>Our current goal for Stat 592 is to provide graduate students of all backgrounds training
-                    that will help them be successful educators whether they are leading labs/recitations,
+                <p>Our current goal for Stat 592 is to provide graduate students of all backgrounds experiences
+                    which will help them become successful educators whether they are leading labs/recitations,
                     overseeing small groups of students, or teaching their own sections of a statistics course.
                 </p>
                 <h3>Learning Objectives</h3>
                 <p>We have adopted the following learning objectives for this course.</p>
                 <ul>
                     <li>Students will construct a practical understanding of the Guidelines for Assessment and
-                        Instruction in Statistics Education (GAISE; 2016 college report)
+                        Instruction in Statistics Education (GAISE) 2016 college report.
                     </li>
-                    <li>Students will develop thier ability to de-centr and think about student thinking which
+                    <li>Students will develop their ability to de-center and think about potential student thinking
+                        which
                         might underpin student responses.
                     </li>
                     <li>Students will develop their own arsenal of pedagogical tools (e.g., active learning techniques,
@@ -123,41 +126,36 @@
                 <ol>
                     <li>
                         <strong>Speak with Meaning:</strong> Everything that a person says should carry meaning to
-                        others. Each of us need to do our best to avoid vague phrases and pronouns without clear
+                        others. Each of us needs to do our best to avoid vague phrases and pronouns without clear
                         antecedents (i.e., what the pronoun refers to). Explain and justify your reasoning, statements,
                         arguments, etc.
                     </li>
                     <li>
                         <strong>Exhibit Intellectural Integrity:</strong> Base your statements on what you understand
-                        and what you're still wrestling with. Avoid making statements that reflect what you believe are
-                        what someone else wants to hear. Each of us should feel empowered to express your confusion
-                        and/or struggles with the material. This will help make the class much more productive for
-                        everyone.
+                        and what you're still wrestling with. There is courage and power in admitting to where you
+                        struggling. Avoid making statements that reflect what you believe are what someone else wants to
+                        hear. Each of us should feel empowered to express your confusion and/or struggles with the
+                        material. This will help make the class much more productive for everyone.
                     </li>
                     <li>
                         <strong>Strive to Make Sense:</strong> There are underlying threads of coherence between various
                         ideas we'll talk about throughout the course. As your instructor, I'll do my best to raise your
                         awareness of these threads. However, I can't do your learning, thinking, or growing for you.
-                        Thus,
-                        you must take the lead in your education throughout the course. Each of you has a powerful
-                        support
-                        system you can make use of: your peers and your instructor. You may encounter ideas that run
-                        counter
-                        to what you understand--do not dismiss them out of hand; seek to understand the nature of those
-                        ideas.
+                        Thus, you must take the lead in your education throughout the course. Each of you has a powerful
+                        support system you can make use of: your peers and your instructor. You may encounter ideas that
+                        run counter to what you understand--do not dismiss them out of hand; seek to understand the
+                        nature of those ideas.
                     </li>
                     <li>
                         <strong>Respect the Learning Process of Others:</strong> Allow people the opportunity to think,
-                        reflect,
-                        and construct their understandings. When assisting your students or your peers, pose questions
-                        to help
-                        them construct meaning rather than show them how to get an answer.
+                        reflect, and construct their understandings. When assisting your students or your peers, pose
+                        questions to help them construct meaning rather than show them how to get an answer.
                     </li>
                 </ol>
                 <h3>Student Responsibilities</h3>
-                <p>To be determined by class discussion.</p>
+                <p><mark>To be determined by class discussion</mark></p>
                 <h3>Teacher Responsibilities</h3>
-                <p>To be determined by class discussion.</p>
+                <p><mark>To be determined by class discussion</mark></p>
                 <h3>Attendance and Participation Policy</h3>
                 <p>
                     Attendance and participation are vitally important for our class community. Attending each class
@@ -172,15 +170,20 @@
                     sanctioned event, or religious observance/practice. Please let me know if you are going to
                     be absent. Abscences can jeopardize your final course grade.
                 </p>
+                <p>
+                    Students who are absent three or more times throughout the semester may receive a failing grade for
+                    the
+                    course. (Note: Three abscences is equivalent to missing 20% of the course.)
+                </p>
                 <h4>Participation</h4>
                 <p>Given that this course is primarily discussion based, your participation is absolutely necessary.
-                    For this course, we agreed to define participation as: TO BE DETERMINED BY CLASS DISCUSSION
-                </p>
+                    For this course, we agreed to define participation as:</p>
+                <p><mark>To be determined by class discussion</mark></p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="assignments">Assignments and Assessment</h2>
                 <h3>My Assessment Approach</h3>
                 <p>Given that this course is meant to help you become better teachers of statistics as well as
-                    well as prepare you to supervice undergraduate students in a variety of situations, my
+                    well as prepare you to supervise undergraduate students in a variety of situations, my
                     approach to assessment is pragmatic in nature. I am interested in your growth over the
                     semester. While a final grade will be assigned, we want you to focus on your participation
                     and reflections, not the accumulation of points.
@@ -224,6 +227,10 @@
                 <h3>Examination Policy</h3>
                 <p>This course will not have any tests or exams.</p>
                 <h3>Grading Policy</h3>
+                <p>
+                    While there are different types of assignments, they are all equally important to your growth. Thus,
+                    there no category weights.
+                </p>
                 <table rules="all" border="1px">
                     <caption>Final Course Grades</caption>
                     <thead>
@@ -268,40 +275,50 @@
                 </table>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">Tentative Course Calendar</h2>
-                <p>Coming soon</p>
+                <p>The following is a <em>tenative</em> course calendar and is subject to change to meet our needs.</p>
+                <ul>
+                    <li>8/25/22: Welcome, Introductions, Policy Decisions</li>
+                    <li>9/1/22: Teaching Demo #1</li>
+                    <li>9/8/22: Teaching Demo #1, cont.</li>
+                    <li>9/15/22: TBA--Teaching Observations</li>
+                    <li>9/22/22: Discuss Observations, What is Teaching?</li>
+                    <li>9/29/22: GAISE, Part 1</li>
+                    <li>10/6/22: In-Class Prep for Teaching Demo #2</li>
+                    <li>10/13/22: Teaching Demo #2</li>
+                    <li>10/20/22: Teaching Demo #2, cont.</li>
+                    <li>10/27/22: GAISE, Part 2</li>
+                    <li>11/3/22: Group Work and Lesson Formats</li>
+                    <li>11/10/22: Lesson Study </li>
+                    <li>11/17/22: Lesson Study</li>
+                    <li>11/24/22: No Class--Thanksgiving Break</li>
+                    <li>12/1/22: Practice Team Teaching</li>
+                    <li>12/8/22: Practice Team Teaching</li>
+                </ul>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="inclusion">Inclusive Practices</h2>
                 <p>As a class community, we need to be respectful and welcoming of all members. Inclusive practices
-                    start
-                    from day one and are important to me.
+                    start from day one and are important to me.
                 </p>
                 <h3>Gender Identity</h3>
                 <p>
                     Our institution's official policy states that "The Pennsylvania State University recognizes the need
-                    or
-                    preference for members of the University community to refer to themselves by a first name other than
-                    their
-                    legal first name as well as self-assert a gender other than their legal gender or their gender at
-                    the time
-                    of birth (AD 84)." One way we can support self-identification is by honoring the name and pronouns
-                    that
-                    each of us go by.
+                    or preference for members of the University community to refer to themselves by a first name other
+                    than their legal first name as well as self-assert a gender other than their legal gender or their
+                    gender at the time of birth (AD 84)." One way we can support self-identification is by honoring the
+                    name and pronouns that each of us go by.
                 </p>
                 <p>
                     Many people (e.g. international students, performers/writers, trans &amp; non-binary people, and
-                    others)
-                    might go by a name in daily life that is different from their legal name. In this classroom, we seek
-                    to
-                    refer to people by the names that they go by.
+                    others) might go by a name in daily life that is different from their legal name. In this classroom,
+                    we seek to refer to people by the names that they go by.
                 </p>
                 <p>
                     Pronouns can be a way to affirm someone's gender identity, but they can also be unrelated to a
-                    person's
-                    identity. They are simply a public way in which people are referred to in place of their name (e.g.,
-                    "he" or "she" or "they" or "ze" or something else). In this classroom, you are invited (if you want
-                    to)
-                    to share what pronouns you go by, and we seek to refer to people using the pronouns that they share.
-                    The pronouns someone indicates are not necessarily indicative of their gender identity.
+                    person's identity. They are simply a public way in which people are referred to in place of their
+                    name (e.g., "he" or "she" or "they" or "ze" or something else). In this classroom, you are invited
+                    (if you want to) to share what pronouns you go by, and we seek to refer to people using the pronouns
+                    that they share. The pronouns someone indicates are not necessarily indicative of their gender
+                    identity.
                 </p>
                 <p>
                     Visit <a class="bodylinks" target="_blank" rel="noopener"
@@ -319,10 +336,8 @@
                         http://equity.psu.edu/reportbias/reports/protocol-for-responding-to-bias-motivated-incidents</a>)
                     that is grounded in the policy that the &ldquo;University is committed to creating an educational
                     environment which is free from intolerance directed toward individuals or groups and strives to
-                    create and
-                    maintain an environment that fosters respect for others.&rdquo; That policy is embedded within an
-                    institution
-                    traditionally committed to <a class="bodylinks" target="_blank" rel="noopener"
+                    create and maintain an environment that fosters respect for others.&rdquo; That policy is embedded
+                    within an institution traditionally committed to <a class="bodylinks" target="_blank" rel="noopener"
                         href="https://guru.psu.edu/policies/OHR/hr64.html">academic
                         freedom</a> (<a class="bodylinks" target="_blank" rel="noopener"
                         href="https://guru.psu.edu/policies/OHR/hr64.html">https://guru.psu.edu/policies/OHR/hr64.html</a>)
@@ -490,24 +505,25 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="misc">Additional Information</h2>
                 <h3>Instructor Absence</h3>
-                <p>In the event that one of the instructors is not able to attend class, the other instructor will hold
-                    class. In the event that both instructors are unable to attend, we will either arrange for a guest
-                    speaker/instructor (a substitute), for work time (independent or in groups), or cancel the session.
-                    Such information will be announced as needed via PSU email/Canvas.
+                <p>In the event that I'm not able to attend class, I will send out an annoucement for what the plan will
+                    be. This may include having a guest speaker/instructor (a substitute), for work time (independent or
+                    in groups), or cancel the session. Such information will be announced as needed via PSU
+                    email/Canvas.
                 </p>
-                <h3>Syllabus Policy</h3>
+                <h3>Syllabus Changes</h3>
                 <p>
                     The syllabus for this course (and all other course syllabi) <em>does not</em> constitute a
                     legal contract. Further, I intend for this syllabus to change to reflect the decisions we
                     make as a community on several areas listed above as well as adapting to our needs
-                    throughout the semester. Changes to the syllabus will announced in class and updated here. 
+                    throughout the semester. Changes to the syllabus will announced in class and updated here.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
 
             </div>
             <div id="footer">
                 <div align="center">
-                    <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State" src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
+                    <a href="http://stat.psu.edu"><img border="0" alt="Statistics at Penn State"
+                            src="1_Images/psu_mark.jpg" class="noborder" style="width: 318px; height: 85px;" /></a>
                     <br /> © 2022 Neil Hatfield
                     <br />
                 </div>
